// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles .createCssValueFromArray should create responsive CSS for the attribute provided 1`] = `
"
    
    
    @media (min-width: 0px) {
      padding: 1.6rem;
    }
  
    @media (min-width: 920px) {
      padding: 3.2rem;
    }
  "
`;

exports[`Styles .createCssValueFromArray should create responsive CSS for the attribute provided 2`] = `
"
    
    
    @media (min-width: 0px) {
      width: 100%;
    }
  
    @media (min-width: 920px) {
      width: 32px;
    }
  "
`;

exports[`Styles .createResponsiveProp should add default styles correctly 1`] = `"border: solid 1px red;"`;

exports[`Styles .createResponsiveProp should create responsive styles correctly 1`] = `
"
    
    
    @media (min-width: 0px) {
      padding: 1;
    }
  
    @media (min-width: 920px) {
      padding: 2;
    }
  "
`;

exports[`Styles .mediaQuery should create a media query correctly 1`] = `
"
    display: block;
    @media (min-width: 0px) {
      display: flex
    }
  "
`;
